# CustomNeutralNetwork

./: CMakeLists.txt  README.md  main.cpp  myapp  seeds_dataset.txt
include/: DataPreprocessing.h  NeuralNetwork.h  NeutralNetwork.h
src/: DataPreprocessing.cpp  NeuralNetwork.cpp  NeutralNetwork.cpp
